Fix all @Valid's on lists. That gives warnings.